@@ -19,7 +19,7 @@ package Astro::Catalog;
 #    Alasdair Allan (aa@astro.ex.ac.uk)
 
 #  Revision:
-#     $Id: Catalog.pm,v 1.41 2004/02/06 00:55:30 cavanagh Exp $
+#     $Id: Catalog.pm,v 1.42 2004/02/24 04:26:50 timj Exp $
 
 #  Copyright:
 #     Copyright (C) 2002 University of Exeter. All Rights Reserved.
@@ -51,7 +51,7 @@ scalar, glob or array.
 =head1 FORMATS
 
 For input the C<Astro::Catalog> module understands Cluster, Simple, JCMT,
-TST and (a very simple parsing) of VOTable.
+TST, STL, GaiaPick and (a very simple parsing) of VOTable.
 
 The module can output all of these formats except TST (which is input only).
 
@@ -71,7 +71,7 @@ use Astro::Catalog::Star;
 use Time::Piece qw/ :override /;
 use Carp;
 
-'$Revision: 1.41 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
+'$Revision: 1.42 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
 $DEBUG = 0;
 
 
@@ -79,7 +79,7 @@ $DEBUG = 0;
 
 =head1 REVISION
 
-$Id: Catalog.pm,v 1.41 2004/02/06 00:55:30 cavanagh Exp $
+$Id: Catalog.pm,v 1.42 2004/02/24 04:26:50 timj Exp $
 
 =head1 METHODS
 
@@ -1366,6 +1366,7 @@ sub _load_io_plugin {
   $format = 'TST'  if $format eq 'Tst';
   $format = 'VOTable' if $format eq 'Votable';
   $format = 'STL'  if $format eq 'Stl';
+  $format = 'GaiaPick' if $format eq 'Gaiapick';
 
   my $class = "Astro::Catalog::IO::" . $format;
 
